test/tests/operators/match/error_empty.txt
error: expected at least one match arm
 --> tests/operators/match/error_empty.tql:6:10
  |
6 | match x {}
  |          ^ 
  |
